--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -174,7 +174,7 @@
                                     <div data-i18n="Error">Bride</div>
                                 </a>
                             </li>
-                        
+
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -279,6 +279,20 @@
                     <li class="menu-item">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons bx bx-table"></i>
+                            <div data-i18n="Tables">Contact</div>
+                        </a>
+                        <ul class="menu-sub">
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Contact" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Contact</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a href="javascript:void(0);" class="menu-link menu-toggle">
+                            <i class="menu-icon tf-icons bx bx-table"></i>
                             <div data-i18n="Tables">Layout</div>
                         </a>
                         <ul class="menu-sub">
@@ -304,7 +318,7 @@
                             </li>
                         </ul>
                     </li>
-                  
+
                 </ul>
             </aside>
             <!-- / Menu -->
