--- a/BrideyApp/BrideyApp/Views/Account/ForgotPassword.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/ForgotPassword.cshtml
@@ -28,8 +28,8 @@
                     new password via email.
                 </p>
                 <form class="lost_reset_password" method="post" asp-controller="Account" asp-action="ForgotPassword">
-                    <label for="user_login">Username or email</label>
-                    <input class="input-text"  asp-for="Email">
+                    <label for="user_login">Email *</label>
+                    <input class="input-text" type="email" asp-for="Email">
                     <span class="text-danger" asp-validation-for="Email"></span>
                     <button type="submit">Reset password</button>
                 </form>
