--- a/BrideyApp/BrideyApp/Areas/Admin/Views/User/Index.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/User/Index.cshtml
@@ -26,6 +26,9 @@
                             @user.FirstName.ToUpper()
                         </td>
                         <td class="py-1" style="text-align: center;">
+                            @user.LastName
+                        </td>
+                        <td class="py-1" style="text-align: center;">
                             @user.Email
                         </td>
                         <td class="py-1" style="text-align: center;">
@@ -38,10 +41,8 @@
     </div>
     <nav aria-label="Page navigation example" style="padding-top: 18px;">
         <ul class="pagination justify-content-center">
-            <li class="page-item @(Model.HasPrevious ? " " : "disabled")">
-                <a asp-action="Index" asp-route-page="@(Model.CurrentPage - 1)">
-                    <span class="page-link @(Model.HasNext ? " " : "disabled")" style="background: #696cffd9;color:#fff">Previous</span>
-                </a>
+            <li class="page-item @(Model.HasPrevious ? " " : "d-none")">
+                <a asp-action="Index" asp-route-page="@(Model.CurrentPage - 1)" class="page-link" style="background: #696cffd9;color:#fff">Previous</a>
             </li>
             @for (int i = 1; i <= Model.TotalPage; i++)
             {
@@ -49,7 +50,7 @@
                     <a asp-action="Index" asp-route-page="@i"><span class="page-link">@i</span></a>
                 </li>
             }
-            <li class="page-item @(Model.HasNext ? " " : "disabled")" style="width: 83px;">
+            <li class="page-item @(Model.HasNext ? " " : "d-none")" style="width: 83px;">
                 <a asp-action="Index" asp-route-page="@(Model.CurrentPage + 1)" class="page-link" style="background: #696cffd9;color:#fff">Next</a>
             </li>
         </ul>
