--- a/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
@@ -9,8 +9,8 @@
             <div class="col-lg-6">
                 <div class="text-danger mb-2" asp-validation-summary="All"></div>
                 <form method="post" asp-controller="Account" asp-action="ResetPassword">
-                    <div class="login-form" style=" position: relative;left: 350px;top: 50px;">
-                        <h4 class="login-title">Forgot Password</h4>
+                    <div class="login-form" style=" position: relative;left: 350px;top: 50px;margin-bottom: 87px;">
+                        <h4 class="login-title" style="color: #e9ac98;B">Forgot Password</h4>
 
                         <div class="row">
                             <div class="reset" style="display: flex;flex-direction: column; text-align: left; justify-content: space-between; height: 230px;">
@@ -18,7 +18,7 @@
                                 <span class="text-danger" asp-validation-for="Password"></span>
                                 <input asp-for="ConfirmPassword" placeholder="Repeat Password" style="height: 50px; padding-left: 12px;" />
                                 <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
-                                <button type="submit" style="width: 100px; height: 40px;border: none; background-color: #dd9565;color: #ffecd5;">
+                                <button type="submit" style="width: 100px; height: 40px;border: none; background-color: #e9ac98;;color: #ffecd5;">
                                     Send
                                 </button>
                             </div>
