--- a/BrideyApp/BrideyApp/Views/Home/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model HomeVM
+@inject UserManager<AppUser> userManager
 @{
     ViewData["Title"] = "Home";
 }
@@ -122,7 +123,7 @@
     <section id="products">
         <div class="container">
             <div class="row">
-                @foreach(var product in Model.Products)
+                @foreach (var product in Model.Products)
                 {
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
@@ -341,12 +342,13 @@
                 </div>
                 <div class="col-lg-8 col-sm-12 col-md-6">
                     <div class="block-content">
-                        <form>
-                            <div class="input-area">
-                                <input placeholder="Your email address">
-                            </div>
-                            <button type="submit">SUBSCRIBE</button>
-                        </form>
+                            <form method="post" asp-controller="Home" asp-action="PostSubscribe">
+                                <div class="input-area">
+                                    <input placeholder="Your email address" asp-for="Email">
+                                    <span class="text-danger" asp-validation-for="Email">@ViewBag.error</span>
+                                </div>
+                                <button type="submit">SUBSCRIBE</button>
+                            </form>
                     </div>
                 </div>
             </div>
