--- a/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
@@ -158,7 +158,7 @@
                     <div class="filter-toggle">
                         <i class="fa-solid fa-sliders"></i><span>Filter</span>
                     </div>
-                    <select class="form-select" aria-label="Default select example">
+                    <select id="sort-responsive" class="form-select" aria-label="Default select example">
                         <option value="1" selected>Sort By Default</option>
                         <option value="2">Sort By Latest</option>
                         <option value="3">Sort By Popularity</option>
