--- a/BrideyApp/BrideyApp/Views/Shop/ProductDetail.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/ProductDetail.cshtml
@@ -128,9 +128,9 @@
                         </div>
                         <div class="clearfix">
                             <div class="number">
-                                <span class="minus">-</span>
+                                <span class="minus decrementDetail">-</span>
                                 <input type="text" value="1" />
-                                <span class="plus">+</span>
+                                <span class="plus incrementDetail">+</span>
                             </div>
 
                         </div>
@@ -284,7 +284,7 @@
 
                                                 </div>
                                                 <div class="submit-button">
-                                                    <a type="submit" asp-controller="Account" asp-action="Login">Post Comment</a>
+                                                    <a asp-controller="Account" asp-action="Login">Post Comment</a>
                                                 </div>
                                             </form>
 
@@ -345,6 +345,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="~/assets/slicky/slick-1.8.1/slick/slick.min.js"></script>
     <script src="~/assets/js/productDetail.js"></script>
+    <script src="~/assets/js/common.js"></script>
 
 }
 
