--- a/BrideyApp/BrideyApp/wwwroot/assets/scss/style.css
+++ b/BrideyApp/BrideyApp/wwwroot/assets/scss/style.css
@@ -416,7 +416,8 @@ hr {
         opacity: 0;
         position: absolute;
         top: 38%;
-        left: 14%;
+        text-align: center;
+        left: 26%;
     }
 
         #products .cart .functional-buttons ul {
@@ -424,7 +425,7 @@ hr {
             display: flex;
             gap: 6px;
         }
-           
+
 
             #products .cart .functional-buttons ul li a {
                 background: #fff;
@@ -433,8 +434,8 @@ hr {
                 line-height: 25px;
                 display: block;
                 font-size: 14px;
-                padding: 10px 13px 10px;
-                cursor:pointer;
+                padding: 7px 13px 10px;
+                cursor: pointer;
             }
 
                 #products .cart .functional-buttons ul li a i {
@@ -3552,6 +3553,19 @@ hr {
         #product-detail .complete-look-content .tab-info .submit-button {
             margin: 35px 20px 10px 24px;
         }
+            #product-detail .complete-look-content .tab-info .submit-button button {
+                background-color: #b97a56;
+                color: white;
+                border: none;
+                font-family: initial;
+                transition: 0.7s;
+                border-radius: 5px;
+                text-decoration: none;
+                position: relative;
+                right: 19px;
+                padding: 11px 16px;
+            }
+
 
             #product-detail .complete-look-content .tab-info .submit-button a {
                 width: 130px;
